--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   restart-bot:
     image: node:16-alpine
     container_name: restart-bot-telegram
+    icon: https://i.imgur.com/4mShIBd.png
     ports:
       - "3233:3000"
     volumes:
